--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World
+<!DOCTYPE HTML>
+
+<html>
+	<head>
+		<title>Kyle Strader</title>
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
+
+		<!-- Wraps entire page -->
+		<div id="page-wrapper">
+
+			<!-- Header -->
+			<div id="header">
+				
+				<!-- Header title -->
+				<h1><a href="index.html" id="logo">Kyle Strader</a></h1>
+				<h1><em>Software Engineer | Game Programmer</em></a></h1>
+
+				<!-- Navigation -->
+				<nav id="nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">About Me</a></li>
+						<li><a href="index.html">Resume</a></li>
+						<li><a href="index.html">Projects</a></li>
+						<li><a href="index.html">Blog</a></li>
+						<li><a href="index.html">Contact Me</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</body>
+</html>
