Finish slide show layout and begin using animate.css animations.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 			  
 				<div class="mySlides fade">
-					<img src="images/banner2.bmp" style="width:100%">
+					<img src="images/banner2.png" style="width:100%">
 					<section id="banner">
 						<header>
 							<h2>Artificial Intelligence: Final Project</h2>
@@ -71,9 +71,12 @@
 					<span class="dot" onclick="currentSlide(3)"></span> 
 				</div>
 			</div>
-			
+			<div>
+				<p>Kyle Strader</p>
+			</div>
 		</div>
 	</body>
 </html>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/js/slideshow.js"></script>
