new banner3 image

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</div>
 
 				<div class="mySlides">
-					<img src="images/banner3.bmp">
+					<img src="images/banner3.png">
 					<div class="slide-description" style="width: 30em">
 						<div class="description-title animated fadeInLeft">Getting Away</div>
 						<div class="description-title animated fadeInRight">
