Add new banner2 image.

--- a/index.html
+++ b/index.html
@@ -46,14 +46,17 @@
 						</div>
 					</div>
 				</div>
-			  
+
 				<div class="mySlides">
-					<img src="images/banner2.png" style="width:100%">
-					<div class="slide-description">
-						<span>Dan Shredder</span>
-						<span>In Hellzone</span>
-						<p>What happens in Vegas</p>
-						<p>SLAYS in Vegas</p>
+					<img src="images/banner2.png">
+					<div class="slide-description" style="width: 30em">
+						<div class="description-title animated fadeInLeft">Asteroids</div>
+						<div class="description-phrase animated fadeInLeft">
+							<div class="description-phrase" style="color:#f49542">></div> An online multiplayer
+						</div>
+						<div class="description-phrase animated fadeInRight">
+							asteroids game
+						</div>
 					</div>
 				</div>
 
