Begin work on about me section of landing page.

--- a/index.html
+++ b/index.html
@@ -92,9 +92,36 @@
 					<span class="dot" onclick="currentSlide(3)"></span> 
 				</div>
 			</div>
-			<div>
-				<p>Kyle Strader</p>
-				<img src="images/profile.jpg">
+			<div class="about-me-landing">
+				<div>
+					<div>
+						<span>Welcome</span>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.								
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla qui.								
+						</p>
+					</div>
+					<div>
+						<img src="images/profile.jpg">
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.								
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla qui.								
+						</p>
+					</div>
+					<div>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.
+						</p>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla qui.									
+						</p>
+						<img src="images/players.png">
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
